--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,14 @@ body {
     background: red;
 }
 
+#game-questions{
+    background-color: black;
+    margin-right: 50%;
+}
+
+.done-btn{
+    margin-top: 50px;
+}
 /* .grid {
     width: 600px;
     height: 500px;
